# minst-translator

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.ai/agents/: developer.md
.ai/context/: project.md
.ai/standards/: coding.md
.cursor/rules/: main.mdc
.github/workflows/: ci.yaml  train.yaml
data/: explore.py
doc/: dev-setup.md
docs/mnist-translator/chapters/: instrukcja_uruchomienia.tex
src/data/: ingest.py  split.py
src/inference/: camera.py  csv_source.py  predict.py  protocol.py
src/model/: evaluate.py  train.py
tests/: conftest.py
tests/data/: test_ingest.py
tests/inference/: test_predict.py
